app/frontend/src/assets/scss/style.scss
/* ... */
.summary-container {
  position: fixed;
  //position: relative;
  width: 25%;
  height: 100%;
  top: 12%;
  -webkit-transition: opacity 0.1s ease-in-out;
  padding-bottom: 10px;
}

.summary-header{
    h3 {
        font-size: 1.4em;
        padding-top: 5px;
        padding-bottom: 5px;
    }
  width: 100%;
  margin-top: 0;
  background-color: #bc0031;
  color: white;
  z-index: 0;
  z-index: 1;
  text-align: center;
  box-shadow: 1px 2px 8px rgba(0, 0, 0, .33);
}

.summary-header h3 {
  color: white;
}
.summary-wrapper {
  background-color: darken(#FFF, 3%);
  border-radius: 2px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
  transition: all .3s ease-out;
  font-family: Helvetica, Arial, sans-serif;
  height: 85%;
}
.summary-tab {
    position: relative;
    height: 100%;
}
.modal-body {
  margin: 20px 0;
}

.modal-default-button {
  float: right;
}

.modal-enter {
  opacity: 0;
}

.modal-leave-active {
  opacity: 0;
}

.modal-enter .modal-container,
.modal-leave-active .modal-container {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

.summary-tab{
  width: 100%;
  float: left;

}
.summary-tab-notes{
  width: 100%;
  height: 30%;
}
.summary-tab-original {
    width: 100%;
    height: 20%;
}

.summary-tab-middle {
    height: 50%;
}

.summary-content {
  height: 80%;
  padding: 10px;
  width: 100%;
  overflow: auto;
}

.close-sum {
  z-index: 100000;
  right: 0;
  background-color: white;
  color: $default-red;
  position: absolute;
  float: right;
  padding-top: 2px;
  line-height: 1.2;
  font-size: 1.4em;
}
.close-sum:hover {
    color: white;
    background-color: $default-red !important;
}

.noreply-text {
    font-size: 18px;
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    text-align: center;
    vertical-align: middle;
}

.subbox {
    float: left;
    width: 70%;
    margin-left: -5%;
    padding-left: -10%;
}
.summary-sub-container {
    float: right;
    top: 10%;
    padding-left: 1%;
    width: 30%;
}
.sum {

  width: auto;
  word-wrap: break-word;
}

.white {
        background-color: #F2F2F2
}

.red {
    background-color: $default-red;
    color: white;
}
.sum-original {

  padding: 10px;
  word-wrap: break-word;
}

.md-table {
    min-width: 55em;
    max-width: 60em;
}

.tickettable:hover {
    background-color: lightgrey !important;
    color: black !important;
    cursor: pointer;
}

.md-input {
    color: white;
}
.activated {
    background-color: lightgrey !important;
    color: black !important;
}
footer {
    a {
        color: white !important;
        opacity: 0.6 !important;
        margin-left: 10px !important;
        padding-bottom: 0px;
        text-shadow: 1px 2px #000 !important;
        background: transparent;
        border: 0px!important;
        vertical-align: bottom;

    }
}
footer:hover {
    a {
        opacity: 1 !important;
        border: 0px!important;
        background: transparent;
    }

}

hr {
   padding: 0;
   margin: 8px auto;
   height: 0;
   width: 50%;
   max-height: 0;
   font-size: 2px;
   line-height: 0;
   clear: both;
   border: none;
   border-top: 2px solid #aaaaaa;
   border-bottom: 1px solid #ffffff;
}

.wrapper {
    min-height: 100vh;
}

.welcome-header {
    padding: 5vh;
    justify-content: center;
}

.center-display {
    justify-content: center;
    text-align: center;
    text-indent: 0px;
}

.margin-top {
    margin-top: 10vh;
}

.notification-section {
    min-height: 35vh;
    max-height: 35vh;
    overflow: auto;
}

.ticket-single {
    color: $text-color-def !important;
    padding: 5px;
    margin-right: 7px;
    margin-left: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 1em;
    border-color: darken($text-color-def, 5%);
    border: 1px solid;
}

.ticket-single:hover {
    opacity: 0.7;
}

.courses-section {
    max-height: 65vh;
    min-height: 65vh;
    overflow: auto;
}

.single-course {
    color: green!important;
    background-color: white;
}

.create-ticket-section1 {
    margin-top: 2vh;
}

.create-ticket-section2 {
    min-height: 13vh;
    max-height: 13vh;
    display:flex;
    align-items: center;
    justify-content: center;
}

.padding-bottom-0 {
    padding-bottom: 0px!important;
}

.float-left {
    float: left;
}

.padding-left-10 {
    padding-left: 10px;
}

.material-icons:hover {
    cursor: pointer;
}

.create-ticket-section:hover {
    cursor: pointer;
}

.fixedlocation {
    position: fixed;
    float: right;
}

.ocrbutton {
    width: 10%;
    padding-bottom: 5px;
    text-align: center;
    float: right;
}

.ocrbutton:hover {
    text-decoration: underline;
    color: $default-red;
    cursor: pointer;
    background-color: darken(white, 5%);
}

.loading {
  position: fixed;
  z-index: 999;
  height: 2em;
  width: 2em;
  overflow: show;
  margin: auto;
  visibility: hidden;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

/* Transparent Overlay */
.loading:before {
  content: '';
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.3);
}

/* :not(:required) hides these rules from IE9 and below */
.loading:not(:required) {
  /* hide "loading..." text */
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

